syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

message SumRequest {
    int32 number_one = 1;
    int32 number_two = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 result = 1;
}

service CalculatorService {
    //Unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    //Streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}
